--- a/index.html
+++ b/index.html
@@ -24,18 +24,21 @@
         </div>
         
         <div class ="time">
-            <p id = "cname">卢美琪 在加州</p>
+            <p id = "cname">女儿 在加州</p>
         </div class="time">
-            <p id="ename">Nova Lu in California</p>
+            <p id="ename">Daughter in California</p>
         </div>
           
     <figure onclick="act()">
     <video loop controls>
-        <source src="nova_lu.mp4" type="video/mp4">
+        <source src="back_throw.mp4" type="video/mp4">
     </video>
     </figure>
 </div>
-
+</br></br>
+<div class="footer">
+    <p>© 2020 Shaoli</p>
+</div>
 <script src="freeThrow.js"></script> 
 </body>
 </html>
