--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nova Lu</title>
+    <title>Back Throw</title>
     <link rel="stylesheet" href="freeThrow.css">
     
     <link rel="apple-touch-icon" sizes="205x154" href="favicon.png">
